<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Guardian App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_children_list_add">Add</string>
    <string name="action_children_list_logout">Log Out</string>
    <string name="action_children_list_email_setting">Email Setting</string>
    <string name="action_children_list_notifications">Notifications</string>
    <string name="action_children_list_messages">Messages</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_children_list">Person List</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_children_list_add">ChildrenListAddActivity</string>
    <string name="title_activity_children_manage">Person Manage</string>
    <string name="title_activity_notify_mail_manage">Notify Mail Manage</string>
    <string name="title_activity_notify_mail_add">Add Notify Mail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_app_manage">Application Manage</string>
    
    <string name="childBasicInfoFragment.basicInfoTitleHeader">Person Basic Info</string>
    <string name="childAppManageFragment.basicInfoTitleHeader">APP Manage</string>
    <string name="childManageMoreFragment.moreTitleHeader">More</string>
    <string name="personControlFragment.titleHeader">Control</string>
    <string name="summary_on">The preference is on</string>
    <string name="summary_off">The preference is off</string>
    <string name="switch_lock">LOCK</string>
    <string name="switch_unlock">UNLOCK</string>
    <string name="title_activity_exception_phone">Exception Phone</string>
    <string name="title_activity_modify_lock_password">Modify Lock Password</string>
    <string name="modifyLockPassword.title">Change Lock Password</string>
    <string name="modifyLockPassword.passwordHint">New password</string>
    <string name="modifyLockPassword.confirmPasswordHint">Confirm new password</string>
    <string name="modifyLockPassword.passwordTextView">New Password</string>
    <string name="modifyLockPassword.confirmPasswordTextView">Password Confirm</string>
    <string name="modifyLockPassword.okBtn">Change Password</string>
    <string name="modifyLockPassword.cancelBtn">Cancel</string>
    <string name="title_activity_exception_phone_add">Add Emergency Contacts</string>
    <string name="title_activity_emergency_contact_manage">Emergency Contacts</string>
	<string name="exceptionPhoneAdd.nameTextView">Name</string>
	<string name="exceptionPhoneAdd.phoneTextView">Phone</string>
	<string name="exceptionPhoneAdd.nameEditTextHint">Name</string>
	<string name="exceptionPhoneAdd.phoneEditTextHint">Phone</string>
	<string name="exceptionPhoneAdd.addBtn">Add</string>
	<string name="exceptionPhoneAdd.cancelBtn">Cancel</string>
	<string name="notifyMailAdd.title">Add Notify Mail</string>
	
	<string name="notifyMailAdd.nameTextView">Name</string>
	<string name="notifyMailAdd.mailTextView">Mail</string>
	<string name="notifyMailAdd.nameEditTextHint">input name here</string>
	<string name="notifyMailAdd.mailEditTextHint">input mail here</string>
	<string name="notifyMailAdd.addBtn">Add</string>
	<string name="notifyMailAdd.cancelBtn">Cancel</string>
	
	<string name="action_apply">Apply</string>
	<string name="action_delete_person">Delete Person</string>
	<string name="action_lock_all_app">Lock All App</string>
	<string name="action_unlock_all_app">Unlock All app</string>
	<string name="action_add_schedule">Add</string>
	<string name="action_update_basic_info">Update</string>
	<string name="action_preset_lock">Preset Lock</string>
	<string name="title_activity_schedule">Schedule</string>
	
	<string name="default_text_perset_lock_start_time">Click to set start time</string>
	<string name="default_text_perset_lock_end_time">Click to set end time</string>
	<string name="default_text_perset_lock_repeat">Click to set repeat</string>
	<string name="default_text_perset_lock_lock_app_setting">"Click to set locked/unlocked applications</string>
	
	
	<string name="actionbar_title_messages">Messages</string>
	<string name="delete">Delete</string>
</resources>
