<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eden.sun.childrenguard.ChildrenManageActivity" >

    <item
        android:id="@+id/apply"
        android:orderInCategory="100"
        android:title="@string/action_apply"
        app:showAsAction=""
        />
    
    
     <item
        android:id="@+id/deletePerson"
        android:orderInCategory="100"
        android:title="@string/action_delete_person"
        app:showAsAction="never"
        />
     
    <item
        android:id="@+id/lockAllApp"
        android:orderInCategory="100"
        android:title="@string/action_lock_all_app"
        app:showAsAction="never"
        />
    
    <item
        android:id="@+id/unlockAllApp"
        android:orderInCategory="100"
        android:title="@string/action_unlock_all_app"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/presetLock"
        android:orderInCategory="100"
        android:title="@string/action_preset_lock"
        app:showAsAction="always"
        />
    
</menu>
