<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eden.sun.childrenguard.ChildrenListActivity" 
    >

    <item
        android:id="@+id/action_children_list_add"
        android:orderInCategory="100"
        android:title="@string/action_children_list_add"
        app:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_children_list_out"
        android:orderInCategory="100"
        android:title="@string/action_children_list_logout"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_children_list_notifications"
        android:orderInCategory="100"
        android:title="@string/action_children_list_notifications"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_children_list_email_setting"
        android:orderInCategory="100"
        android:title="@string/action_children_list_email_setting"
        app:showAsAction="never"/>
        
        
        
        
    <!-- <item
        android:id="@+id/action_children_list_messages"
        android:orderInCategory="100"
        android:title="@string/action_children_list_messages"
        app:showAsAction="never"/> -->

</menu>
